<resources>
    <string name="app_name">FireRoad</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="color">Color</string>
    <string name="nombre">Nombres</string>
    <string name="modelo">Modelo</string>
    <string name="macblue">Código Dispositivo</string>
    <string name="apellido">Apellido</string>
    <string name="fechaNacimiento">Fecha Nacimiento</string>
    <string name="mail">Email</string>
    <string name="telefono">Teléfono</string>
    <string name="scan">Scan</string>
    <string name="inicio">Bienvenido</string>
    <string name="registrar">Registrar</string>
    <string name="login">Login</string>
    <string name="politicas">Terminos y condiciones</string>
    <string name="cambiocontr">Cambiar contraseña</string>
    <string name="marca">Marca</string>
    <string name="placa">Placa</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="nuevo_recorrido">¡Inicia Recorrido!</string>
    <string name="server_client_id">847692033013</string>
    <string name="google_app_id">fireroad-1232</string>
    <string name="facebook_app_id">1672065103033826</string>
    <string name="Confirmacion">Confirmar Contraseña</string>
    <string name="PasswordOld">Contraseña actual</string>
    <string name="Genero">Género</string>
    <string name="Contraseña">Contraseña</string>
    <string name="RH">Rh</string>
    <string name="descriptor_Foto">Foto Perfil</string>
    <string name="next">Ok</string>
    <string name="recorridos">Mis recorridos</string>
    <string name="motos">Mis motos</string>


    <string-array name="GeneroItems">
        <item value="1">Masculino</item>
        <item value="2">Femenino</item>
    </string-array>


    <string-array name="RhItems">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="puntosInteres">
        <item>Bar</item>
        <item>Iglesia</item>
        <item>Restaurante</item>
        <item>Hospital</item>
        <item>Parqueadero</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

</resources>
