<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rmasc.fireroad.MotoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:id="@+id/imageButtonMoto"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_moto"
            android:scaleType="fitXY"
            android:contentDescription="Foto" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal">

            <TableRow>
                <TextView
                    android:text="@string/nombre"
                    android:layout_column="1"/>
                <EditText
                    android:id="@+id/editTextNombreMoto"
                    android:inputType="textPersonName"
                    android:ems="10"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/marca"
                    android:layout_column="1"/>
                <EditText
                    android:id="@+id/editTextMarca"
                    android:inputType="textPersonName"
                    android:ems="10"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/marca"
                    android:layout_column="1"/>
                <EditText
                    android:id="@+id/editTextPlaca"
                    android:inputType="textPersonName"
                    android:ems="10"/>
            </TableRow>

        </TableLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnScan"
            android:text="@string/scan"/>

    </LinearLayout>

</RelativeLayout>
